--- a/node-03/.env
+++ b/node-03/.env
@@ -1,3 +1,3 @@
-MONGO_URI= 'mongodb://localhost:27017/authentication'
+MONGO_URI= 'mongodb://localhost:27017/ecom'
 PORT = 5000
 TOKEN_KEY = 'jasdklnadjsddd'
